--- a/calculator/index.html
+++ b/calculator/index.html
@@ -14,7 +14,7 @@
 		<section class="calc">
 			<!-- Display Section -->
 			<div class="calc__display-section">
-				<input class="calc__display" type="number" disabled value="1234567890"/>
+				<p class="calc__display"></p>
 			</div>
 
 			<!-- Buttons Section -->
@@ -30,7 +30,9 @@
 				<button type="button" id="calc__7" class="calc__button-number calc__button">7</button>
 				<button type="button" id="calc__8" class="calc__button-number calc__button">8</button>
 				<button type="button" id="calc__9" class="calc__button-number calc__button">9</button>
-				<button type="button" id="calc__dec" class="calc__button-number calc__button">·</button>
+
+				<!-- Dec button -->
+				<button type="button" id="calc__dec" class="calc__button-dec calc__button">.</button>
 
 				<!-- Operation Buttons -->
 				<button type="button" id="calc__add" class="calc__button-operation calc__button">+</button>
@@ -41,9 +43,13 @@
 
 				<!-- Control Buttons -->
 				<button type="button" id="calc__clr" class="calc__button-control calc__button">C</button>
+				<button type="button" id="calc__empty1" class="calc__button-control calc__button"></button>
+				<button type="button" id="calc__empty2" class="calc__button-control calc__button"></button>
+				<button type="button" id="calc__empty3" class="calc__button-control calc__button"></button>
 			</section>
 		</section>
 	</div>
+	<script src="app.js"></script>
 </body>
 
 </html>
