--- a/calculator/index.html
+++ b/calculator/index.html
@@ -30,19 +30,17 @@
 				<button type="button" id="calc__7" class="calc__button-number calc__button">7</button>
 				<button type="button" id="calc__8" class="calc__button-number calc__button">8</button>
 				<button type="button" id="calc__9" class="calc__button-number calc__button">9</button>
-
-				<!-- Dec button -->
-				<button type="button" id="calc__dec" class="calc__button-dec calc__button">.</button>
+				<button type="button" id="calc__dec" class="calc__button-number calc__button">.</button>
 
 				<!-- Operation Buttons -->
 				<button type="button" id="calc__add" class="calc__button-operation calc__button">+</button>
 				<button type="button" id="calc__sub" class="calc__button-operation calc__button">-</button>
 				<button type="button" id="calc__mul" class="calc__button-operation calc__button">*</button>
 				<button type="button" id="calc__div" class="calc__button-operation calc__button">/</button>
-				<button type="button" id="calc__eql" class="calc__button-operation calc__button">=</button>
 
 				<!-- Control Buttons -->
 				<button type="button" id="calc__clr" class="calc__button-control calc__button">C</button>
+				<button type="button" id="calc__eql" class="calc__button-control calc__button">=</button>
 				<button type="button" id="calc__empty1" class="calc__button-control calc__button"></button>
 				<button type="button" id="calc__empty2" class="calc__button-control calc__button"></button>
 				<button type="button" id="calc__empty3" class="calc__button-control calc__button"></button>
